# forum-app

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.test-db.yml  docker-compose.yml  pyproject.toml  run_tests.sh  test-db.yml
app/: main.py
app/api/: api_router.py  dependencies.py  exception_handler.py
app/api/routers/: auth.py  comment.py  post.py  user.py
app/core/: config.py  db.py  exceptions.py  security.py  utils.py
app/core/exceptions/: auth.py  common.py  entity.py
app/main/: exc_handlers.py  lifespan.py  routers.py  web.py
app/migrations/: env.py
app/migrations/versions/: 20679306f616_init_models.py  a82338cfb4ae_init_models.py  d7b2921b57e7_add_is_ai_column_to_comment_table.py
app/models/: comment.py  post.py  user.py
app/models/common/: status.py  timestamped.py
app/models/common/enums/: ai_roles.py  token_type.py
app/repositories/: comment_gateway.py  post_gateway.py  user_gateway.py
app/schemas/: auth.py  comment.py  pagination.py  post.py  user.py
app/services/: ai_comment_response_task.py  auth_service.py  celery_task.py  comment_service.py  post_service.py  scheduler.py  user_service.py
app/services/common/: base_service.py  scheduler.py
app/tests/: conftest.py  error_validator.py
app/tests/api/: models.py
app/tests/api/routes/: test_auth.py  test_comment.py  test_post.py  test_user.py
